[build-system]
requires = ["setuptools>=80.9.0", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
indent-width = 4
exclude = [
    ".git",
    ".venv",
    ".tox",
    "build",
    "env",
    "src",
    "docs",
    "versioneer.py",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
exclude = [
    ".git",
    "*/migrations/*",
    "*/static/CACHE/*",
    "docs",
    "node_modules",
    "config/*",
    "versioneer.py",
    "env/*",
    ".venv",
    "_version.py"
]
ignore = ["E203", "E266", "E501", "F405"]
# TODO: Add B and Q, tweak ignores, fix warnings
select = ["E", "F", "W"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
max-complexity = 18
