[build-system]
requires = ["setuptools>=82.0.1", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
indent-width = 4
exclude = [
    ".git",
    ".venv",
    ".tox",
    "build",
    "env",
    "src",
    "docs",
    "versioneer.py",
    "_version.py"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
exclude = [
    ".git",
    "*/migrations/*",
    "*/static/CACHE/*",
    "docs",
    "node_modules",
    "config/*",
    "versioneer.py",
    "env/*",
    ".venv",
    "_version.py"
]
# TODO: Review rules, add e.g. B and Q? (see #1910)
ignore = ["E203", "E266", "E501", "F405"]
select = ["E", "F", "W"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
max-complexity = 18
